# ripper-klipper-in-rust-

contoller-board/: contoller-board.kicad_prl  contoller-board.kicad_pro  contoller-board.kicad_sch
host-application/: Cargo.toml
host-application/proto/: phases.proto
host-application/src/: main.rs
mcu-apps/stepper_driver/: Cargo.toml
mcu-apps/stepper_driver/src/: main.rs
stepper-control-board/: stepper-control-board.kicad_prl  stepper-control-board.kicad_pro  stepper-control-board.kicad_sch
