[package]
name = "stepper_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "=2.1.2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "=1.4.1", default-features = false, features = ["cortex-m-systick"] }
imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
teensy4-panic = { version = "0.2", features = ["log"] }
embedded-hal = "0.2.7"
heapless = "0.8"
nb = "1"

[dependencies.teensy4-bsp]
version = "0.5"
features = ["rt"]

